[project]
name = "estimate-volume-extractor"
version = "0.1.0"
description = "Local tool for converting estimate documents to Markdown via MinerU and extracting work volume statements."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5",
    "openpyxl>=3.1",
    "requests>=2.31",
    "streamlit>=1.28",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
estimate-extract = "estimate_extractor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
